Weight Paint hard to see red circle too thinner #79523

Closed
opened 2020-08-04 18:10:32 +02:00 by Kent Davis · 20 comments

System Information
Operating system: Darwin-20.0.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 575 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.0.27

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-03 22:28, hash: 6791b88d28
Worked: (newest version of Blender that worked as expected)

Short description of error
Weight Paint hard to see red circle too thinner

Exact steps for others to reproduce the error
MacOS 11 Beta
Weight Paint hard to see red circle too thinner see picture
Screen Shot 2020-08-04 at 9.05.40 AM.png

**System Information** Operating system: Darwin-20.0.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 575 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.0.27 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-03 22:28, hash: `6791b88d28` Worked: (newest version of Blender that worked as expected) **Short description of error** Weight Paint hard to see red circle too thinner **Exact steps for others to reproduce the error** MacOS 11 Beta Weight Paint hard to see red circle too thinner see picture ![Screen Shot 2020-08-04 at 9.05.40 AM.png](https://archive.blender.org/developer/F8744959/Screen_Shot_2020-08-04_at_9.05.40_AM.png)
Author

Added subscriber: @Kent-Davis

Added subscriber: @Kent-Davis
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Member

There was #73560 and #57570.
And relating commmits d712f1f83a, 42d77fbea1

I cannot really test this [not on a MAC], but the paint cursor is still drawn without this polyline shader afaict, see paint_draw_cursor()

@fclem: does this need to be converted to GPU_SHADER_3D_POLYLINE_UNIFORM_COLOR / immUniform1f("lineWidth", line_width * U.pixelsize) as well?

There was #73560 and #57570. And relating commmits d712f1f83a, 42d77fbea1 I cannot really test this [not on a MAC], but the paint cursor is still drawn without this polyline shader afaict, see `paint_draw_cursor()` @fclem: does this need to be converted to `GPU_SHADER_3D_POLYLINE_UNIFORM_COLOR` / `immUniform1f("lineWidth", line_width * U.pixelsize)` as well?
Author

I don’t know about script code.

I don’t know about script code.

@lichtwerk yes this needs convertion. Do you want to take care of it?

@lichtwerk yes this needs convertion. Do you want to take care of it?
Philipp Oeser self-assigned this 2020-08-05 14:01:58 +02:00
Member

OKi

OKi
Member

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'
Author

Ok no problem.

Ok no problem.
Member

Note: I'll be waiting for D8206: Cleanup: Paint Cursor Refactor to land and do the update afterwards to avoid unneccessary conflicts.

Note: I'll be waiting for [D8206: Cleanup: Paint Cursor Refactor](https://archive.blender.org/developer/D8206) to land and do the update afterwards to avoid unneccessary conflicts.
Author

Sure no problem. I just read your link and I got it.

Sure no problem. I just read your link and I got it.

This issue was referenced by 6ade522f27

This issue was referenced by 6ade522f277fb74d4691973b7bb55840300043a2

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

You said not supported on OSX that LIE! Please fix. Blender can do everything.

You said not supported on OSX that LIE! Please fix. Blender can do everything.

You misunderstood. The title of the commit says it fixes the fact that wide line is not working for paint cursor on OSX. You just have to wait the next build to include the fix.

You misunderstood. The title of the commit says it fixes the fact that wide line is not working for paint cursor on OSX. You just have to wait the next build to include the fix.
Author

Ok
I do remember about 2.80 and 2.90 and I totally believe they can do fix on Mac without "CAN'T" and without "NOT SUPPORT"
.
Long time ago I told them about Blender 2.80 within TimeFrame too thin line need to fix. They said can't fix not support for OSX and they still can't do that, can't can't until finally they fixed Blender 2.90 everything FIXED on timeline and other.

Screen Shot 2020-09-16 at 12.32.53 PM.png

Screen Shot 2020-09-16 at 12.31.02 PM.png

Ok I do remember about 2.80 and 2.90 and I totally believe they can do fix on Mac without "CAN'T" and without "NOT SUPPORT" . Long time ago I told them about Blender 2.80 within TimeFrame too thin line need to fix. They said can't fix not support for OSX and they still can't do that, can't can't until finally they fixed Blender 2.90 everything FIXED on timeline and other. ![Screen Shot 2020-09-16 at 12.32.53 PM.png](https://archive.blender.org/developer/F8890080/Screen_Shot_2020-09-16_at_12.32.53_PM.png) ![Screen Shot 2020-09-16 at 12.31.02 PM.png](https://archive.blender.org/developer/F8890079/Screen_Shot_2020-09-16_at_12.31.02_PM.png)
Author

Congratulation I check there resolve fix yaaa ay good job.
Screen Shot 2020-09-17 at 1.31.31 AM.png

Congratulation I check there resolve fix yaaa ay good job. ![Screen Shot 2020-09-17 at 1.31.31 AM.png](https://archive.blender.org/developer/F8891708/Screen_Shot_2020-09-17_at_1.31.31_AM.png)

This issue was referenced by a0f6da0abc

This issue was referenced by a0f6da0abc6fefc6a679d8182b673e7c5ad3fdde
Philipp Oeser removed their assignment 2020-10-05 17:04:46 +02:00
Member

@fclem: since the fix was reverted, did another solution land? Or should we reopen?

@fclem: since the fix was reverted, did another solution land? Or should we reopen?

A better more general fix for all cases was implemented in 649b0ccac8

A better more general fix for all cases was implemented in 649b0ccac8
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79523
No description provided.