Fix T79523 Paint Cursor: Wide line not supported on OSX

This replace the use of GPU_line_width by the specialized
GPU_SHADER_3D_POLYLINE_UNIFORM_COLOR shader.